antlr/pascalParser.py
# Generated from pascal.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pascalParser ( Parser ):

    grammarFileName = "pascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'input'", "','", "'output'", "')'", 
                     "';'", "':'", "'['", "']'", "'+'", "'-'", "'*'", "'/'", 
                     "'..'", "'and'", "'array'", "'begin'", "'case'", "'const'", 
                     "'div'", "'do'", "'downto'", "'else'", "'end'", "'for'", 
                     "'function'", "'if'", "'in'", "'mod'", "'nil'", "'not'", 
                     "'of'", "'or'", "'procedure'", "'program'", "'record'", 
                     "'repeat'", "'then'", "'to'", "'type'", "'until'", 
                     "'var'", "'while'", "'integer'", "'real'", "'boolean'", 
                     "'string'", "<INVALID>", "'<'", "'>'", "'<='", "'>='", 
                     "'='", "'<>'", "':='", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "KW_AND", "KW_ARRAY", 
                      "KW_BEGIN", "KW_CASE", "KW_CONST", "KW_DIV", "KW_DO", 
                      "KW_DOWNTO", "KW_ELSE", "KW_END", "KW_FOR", "KW_FUNCTION", 
                      "KW_IF", "KW_IN", "KW_MOD", "KW_NIL", "KW_NOT", "KW_OF", 
                      "KW_OR", "KW_PROCEDURE", "KW_PROGRAM", "KW_RECORD", 
                      "KW_REPEAT", "KW_THEN", "KW_TO", "KW_TYPE", "KW_UNTIL", 
                      "KW_VAR", "KW_WHILE", "KW_INTEGER", "KW_REAL", "KW_BOOLEAN", 
                      "KW_STRING", "LOGIC_LITERAL", "LT", "GT", "LE", "GE", 
                      "EQ", "NE", "ASSIGN", "DOT", "NUMBER", "STRING", "WS", 
                      "COMMENT", "OTHER_COMMENT", "LINE_COMMENT", "IDENTIFIER" ]

    RULE_program = 0
    RULE_program_header = 1
    RULE_declarations = 2
    RULE_type_declarations = 3
    RULE_type_decl = 4
    RULE_record_spec = 5
    RULE_const_declarations = 6
    RULE_const_decl = 7
    RULE_var_declarations = 8
    RULE_var_decl = 9
    RULE_type_spec = 10
    RULE_func_and_proc_declarations = 11
    RULE_func_declaration = 12
    RULE_func_arguments = 13
    RULE_func_argument_grp = 14
    RULE_proc_declaration = 15
    RULE_block = 16
    RULE_code_block = 17
    RULE_statement_list = 18
    RULE_statement = 19
    RULE_case_statement = 20
    RULE_case_branch = 21
    RULE_case_label = 22
    RULE_for_loop = 23
    RULE_repeat_loop = 24
    RULE_if_block = 25
    RULE_while_loop = 26
    RULE_function_call = 27
    RULE_arg_list = 28
    RULE_logic_expression = 29
    RULE_orExpr = 30
    RULE_andExpr = 31
    RULE_relation = 32
    RULE_expression = 33
    RULE_term = 34
    RULE_factor = 35
    RULE_assignment = 36
    RULE_literal = 37
    RULE_array_literal = 38
    RULE_array_index_type = 39

    ruleNames =  [ "program", "program_header", "declarations", "type_declarations", 
                   "type_decl", "record_spec", "const_declarations", "const_decl", 
                   "var_declarations", "var_decl", "type_spec", "func_and_proc_declarations", 
                   "func_declaration", "func_arguments", "func_argument_grp", 
                   "proc_declaration", "block", "code_block", "statement_list", 
                   "statement", "case_statement", "case_branch", "case_label", 
                   "for_loop", "repeat_loop", "if_block", "while_loop", 
                   "function_call", "arg_list", "logic_expression", "orExpr", 
                   "andExpr", "relation", "expression", "term", "factor", 
                   "assignment", "literal", "array_literal", "array_index_type" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    KW_AND=15
    KW_ARRAY=16
    KW_BEGIN=17
    KW_CASE=18
    KW_CONST=19
    KW_DIV=20
    KW_DO=21
    KW_DOWNTO=22
    KW_ELSE=23
    KW_END=24
    KW_FOR=25
    KW_FUNCTION=26
    KW_IF=27
    KW_IN=28
    KW_MOD=29
    KW_NIL=30
    KW_NOT=31
    KW_OF=32
    KW_OR=33
    KW_PROCEDURE=34
    KW_PROGRAM=35
    KW_RECORD=36
    KW_REPEAT=37
    KW_THEN=38
    KW_TO=39
    KW_TYPE=40
    KW_UNTIL=41
    KW_VAR=42
    KW_WHILE=43
    KW_INTEGER=44
    KW_REAL=45
    KW_BOOLEAN=46
    KW_STRING=47
    LOGIC_LITERAL=48
    LT=49
    GT=50
    LE=51
    GE=52
    EQ=53
    NE=54
    ASSIGN=55
    DOT=56
    NUMBER=57
    STRING=58
    WS=59
    COMMENT=60
    OTHER_COMMENT=61
    LINE_COMMENT=62
    IDENTIFIER=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program_header(self):
            return self.getTypedRuleContext(pascalParser.Program_headerContext,0)


        def block(self):
            return self.getTypedRuleContext(pascalParser.BlockContext,0)


        def DOT(self):
            return self.getToken(pascalParser.DOT, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = pascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.program_header()
            self.state = 81
            self.block()
            self.state = 82
            self.match(pascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PROGRAM(self):
            return self.getToken(pascalParser.KW_PROGRAM, 0)

        def IDENTIFIER(self):
            return self.getToken(pascalParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return pascalParser.RULE_program_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_header" ):
                listener.enterProgram_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_header" ):
                listener.exitProgram_header(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_header" ):
                return visitor.visitProgram_header(self)
            else:
                return visitor.visitChildren(self)




    def program_header(self):

        localctx = pascalParser.Program_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_header)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(pascalParser.KW_PROGRAM)
            self.state = 85
            self.match(pascalParser.IDENTIFIER)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 86
                self.match(pascalParser.T__0)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==2:
                    self.state = 87
                    self.match(pascalParser.T__1)


                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3 or _la==4:
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==3:
                        self.state = 90
                        self.match(pascalParser.T__2)


                    self.state = 93
                    self.match(pascalParser.T__3)


                self.state = 96
                self.match(pascalParser.T__4)


            self.state = 99
            self.match(pascalParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_declarations(self):
            return self.getTypedRuleContext(pascalParser.Type_declarationsContext,0)


        def const_declarations(self):
            return self.getTypedRuleContext(pascalParser.Const_declarationsContext,0)


        def var_declarations(self):
            return self.getTypedRuleContext(pascalParser.Var_declarationsContext,0)


        def func_and_proc_declarations(self):
            return self.getTypedRuleContext(pascalParser.Func_and_proc_declarationsContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = pascalParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==40:
                self.state = 101
                self.type_declarations()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 104
                self.const_declarations()


            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 107
                self.var_declarations()


            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26 or _la==34:
                self.state = 110
                self.func_and_proc_declarations()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_TYPE(self):
            return self.getToken(pascalParser.KW_TYPE, 0)

        def type_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.Type_declContext)
            else:
                return self.getTypedRuleContext(pascalParser.Type_declContext,i)


        def getRuleIndex(self):
            return pascalParser.RULE_type_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_declarations" ):
                listener.enterType_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_declarations" ):
                listener.exitType_declarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_declarations" ):
                return visitor.visitType_declarations(self)
            else:
                return visitor.visitChildren(self)




    def type_declarations(self):

        localctx = pascalParser.Type_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(pascalParser.KW_TYPE)
            self.state = 115 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 114
                self.type_decl()
                self.state = 117 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==63):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(pascalParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(pascalParser.EQ, 0)

        def type_spec(self):
            return self.getTypedRuleContext(pascalParser.Type_specContext,0)


        def record_spec(self):
            return self.getTypedRuleContext(pascalParser.Record_specContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_type_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_decl" ):
                listener.enterType_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_decl" ):
                listener.exitType_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_decl" ):
                return visitor.visitType_decl(self)
            else:
                return visitor.visitChildren(self)




    def type_decl(self):

        localctx = pascalParser.Type_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(pascalParser.IDENTIFIER)
            self.state = 120
            self.match(pascalParser.EQ)
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [16, 44, 45, 46, 47, 63]:
                self.state = 121
                self.type_spec()
                pass
            elif token in [36]:
                self.state = 122
                self.record_spec()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 125
            self.match(pascalParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Record_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_RECORD(self):
            return self.getToken(pascalParser.KW_RECORD, 0)

        def KW_END(self):
            return self.getToken(pascalParser.KW_END, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.IDENTIFIER)
            else:
                return self.getToken(pascalParser.IDENTIFIER, i)

        def type_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.Type_specContext)
            else:
                return self.getTypedRuleContext(pascalParser.Type_specContext,i)


        def getRuleIndex(self):
            return pascalParser.RULE_record_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecord_spec" ):
                listener.enterRecord_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecord_spec" ):
                listener.exitRecord_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecord_spec" ):
                return visitor.visitRecord_spec(self)
            else:
                return visitor.visitChildren(self)




    def record_spec(self):

        localctx = pascalParser.Record_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_record_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(pascalParser.KW_RECORD)
            self.state = 133 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 128
                self.match(pascalParser.IDENTIFIER)
                self.state = 129
                self.match(pascalParser.T__6)
                self.state = 130
                self.type_spec()
                self.state = 131
                self.match(pascalParser.T__5)
                self.state = 135 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==63):
                    break

            self.state = 137
            self.match(pascalParser.KW_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_CONST(self):
            return self.getToken(pascalParser.KW_CONST, 0)

        def const_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.Const_declContext)
            else:
                return self.getTypedRuleContext(pascalParser.Const_declContext,i)


        def getRuleIndex(self):
            return pascalParser.RULE_const_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_declarations" ):
                listener.enterConst_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_declarations" ):
                listener.exitConst_declarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_declarations" ):
                return visitor.visitConst_declarations(self)
            else:
                return visitor.visitChildren(self)




    def const_declarations(self):

        localctx = pascalParser.Const_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_const_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(pascalParser.KW_CONST)
            self.state = 141 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 140
                self.const_decl()
                self.state = 143 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==63):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.IDENTIFIER)
            else:
                return self.getToken(pascalParser.IDENTIFIER, i)

        def EQ(self):
            return self.getToken(pascalParser.EQ, 0)

        def literal(self):
            return self.getTypedRuleContext(pascalParser.LiteralContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_const_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_decl" ):
                listener.enterConst_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_decl" ):
                listener.exitConst_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst_decl" ):
                return visitor.visitConst_decl(self)
            else:
                return visitor.visitChildren(self)




    def const_decl(self):

        localctx = pascalParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_const_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(pascalParser.IDENTIFIER)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 146
                self.match(pascalParser.T__2)
                self.state = 147
                self.match(pascalParser.IDENTIFIER)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 153
            self.match(pascalParser.EQ)
            self.state = 154
            self.literal()
            self.state = 155
            self.match(pascalParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_VAR(self):
            return self.getToken(pascalParser.KW_VAR, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.Var_declContext)
            else:
                return self.getTypedRuleContext(pascalParser.Var_declContext,i)


        def getRuleIndex(self):
            return pascalParser.RULE_var_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declarations" ):
                listener.enterVar_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declarations" ):
                listener.exitVar_declarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declarations" ):
                return visitor.visitVar_declarations(self)
            else:
                return visitor.visitChildren(self)




    def var_declarations(self):

        localctx = pascalParser.Var_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(pascalParser.KW_VAR)
            self.state = 159 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 158
                self.var_decl()
                self.state = 161 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==63):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(pascalParser.IDENTIFIER)
            else:
                return self.getToken(pascalParser.IDENTIFIER, i)

        def type_spec(self):
            return self.getTypedRuleContext(pascalParser.Type_specContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = pascalParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(pascalParser.IDENTIFIER)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 164
                self.match(pascalParser.T__2)
                self.state = 165
                self.match(pascalParser.IDENTIFIER)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(pascalParser.T__6)
            self.state = 172
            self.type_spec()
            self.state = 173
            self.match(pascalParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_INTEGER(self):
            return self.getToken(pascalParser.KW_INTEGER, 0)

        def KW_REAL(self):
            return self.getToken(pascalParser.KW_REAL, 0)

        def KW_BOOLEAN(self):
            return self.getToken(pascalParser.KW_BOOLEAN, 0)

        def KW_STRING(self):
            return self.getToken(pascalParser.KW_STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(pascalParser.IDENTIFIER, 0)

        def KW_ARRAY(self):
            return self.getToken(pascalParser.KW_ARRAY, 0)

        def array_index_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pascalParser.Array_index_typeContext)
            else:
                return self.getTypedRuleContext(pascalParser.Array_index_typeContext,i)


        def KW_OF(self):
            return self.getToken(pascalParser.KW_OF, 0)

        def type_spec(self):
            return self.getTypedRuleContext(pascalParser.Type_specContext,0)


        def getRuleIndex(self):
            return pascalParser.RULE_type_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_spec" ):
                listener.enterType_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_spec" ):
                listener.exitType_spec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_spec" ):
                return visitor.visitType_spec(self)
            else:
                return visitor.visitChildren(self)




    def type_spec(self):

        localctx = pascalParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_spec)
        self._la = 0 # Token type
        try:
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [44]:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.match(pascalParser.KW_INTEGER)
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(pascalParser.KW_REAL)
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.match(pascalParser.KW_BOOLEAN)
                pass
            elif token in [47]:
                self.enterOuterAlt(localctx, 4)
                self.state = 178
                self.match(pascalParser.KW_STRING)
                pass
            elif token in [63]:
                self.enterOuterAlt(localctx, 5)
                self.state = 179
                self.match(pascalParser.IDENTIFIER)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 6)
                self.state = 180
                self.match(pascalParser.KW_ARRAY)
                self.state = 181
                self.match(pascalParser.T__7)
                self.state = 182
                self.array_index_type()
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 183
                    self.match(pascalParser.T__2)
                    self.state = 184
                    self.array_index_type()
                    self.state = 189
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
